--- a/resources/assets/less/_base.less
+++ b/resources/assets/less/_base.less
@@ -2,7 +2,7 @@
 body, label, .checkbox label {
 	font-weight: 300;
 	font-family: "Roboto", Helvetica, Arial, sans-serif;
-  background-color: #F9F9F9;
+  background-color: #EEE;
 }
 
 .clickable:hover
