--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -3,10 +3,13 @@
 .utility-flex-container
 	display flex
 
-.section
+.utility-right
+	float: right !important
+
+section
 	margin-bottom 60px
 
-.settings
+.Settings #main-nav
 	padding-top: 0;
 	padding-bottom: 0;
 	border-right: none;
@@ -26,7 +29,7 @@
 	background-color #fff
 
 .Box--Large
-	padding 0 40px
+	padding 60px 40px
 
 .Settings #main-nav ul
 	padding: 0
@@ -55,6 +58,13 @@ ul
 
 .Settings #main-nav ul li i
 	padding-right 15px
+
+.Setting__heading
+	border-bottom 1px solid #e7e7e7
+	margin 0 -40px 30px
+	padding-bottom 30px
+	padding-left 40px
+	padding-right 40px
 
 // Typography
 .material-icons
