--- a/resources/assets/less/_base.less
+++ b/resources/assets/less/_base.less
@@ -1,5 +1,5 @@
 // General styles
-body, label, .checkbox label {
+body {
 	font-weight: 300;
 	font-family: "Roboto", Helvetica, Arial, sans-serif;
   background-color: #EEE;
