stop using typekit fonts

--- a/resources/assets/less/_base.less
+++ b/resources/assets/less/_base.less
@@ -1,8 +1,7 @@
 // General styles
-body {
-	font-weight: 300;
-	font-family: "Roboto", Helvetica, Arial, sans-serif;
-  background-color: #EEE;
+body
+{
+    background-color: #EEE;
 }
 
 .clickable:hover
@@ -27,10 +26,6 @@ h2.tk-seravek-web a
 img {
   height: auto;
   max-width: 100%;
-}
-
-body {
-  font-size: 1.2em;
 }
 
 // Make video containers responsive
