--- a/resources/assets/less/_navigation.less
+++ b/resources/assets/less/_navigation.less
@@ -68,7 +68,8 @@
 }
 
 .dropdown-menu li a {
-	padding: 7px 11px;
+	padding: 10px 15px;
+	font-size: 1.2em;
 }
 
 /* Remove shadow and round corners from dropdown */
