--- a/resources/assets/less/_homepage.less
+++ b/resources/assets/less/_homepage.less
@@ -2,52 +2,85 @@
 
 .drawer
 {
-	padding: 20px 10px;
-	text-align: center;
-	background-image: url('https://compasshb.smugmug.com/photos/i-dVdWJ7B/0/S/i-dVdWJ7B-S.jpg');
+  padding: 20px 10px;
+  text-align: center;
+  background-image: url('https://compasshb.smugmug.com/photos/i-dVdWJ7B/0/S/i-dVdWJ7B-S.jpg');
 }
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: @screen-lg-min) {
-	.drawer
-	{
-		padding: 20px 35px;
-	}
+  .drawer
+  {
+    padding: 20px 35px;
+  }
 }
 
 // Latest sermon on homepage
 .latestsermon
 {
-	color: #fff;
-	text-transform: uppercase;
-	display: block;
-	margin: 0 auto;
-	min-height: 438px;
-	padding-top: 80px;
-	width: 100%;
-	background-size: cover;
+  color: #fff;
+  text-transform: uppercase;
+  display: block;
+  margin: 0 auto;
+  min-height: 438px;
+  padding-top: 80px;
+  width: 100%;
+  background-size: cover;
 }
 
 .latestsermon p
 {
-	margin-top: 20px;
-	color: #fff;
-	text-transform: uppercase;
+  margin-top: 20px;
+  color: #fff;
+  text-transform: uppercase;
 }
 
 .latestsermon h1
 {
-	text-transform: uppercase;
-
+  text-transform: uppercase;
 }
 
 .featuredblog
 {
-	display: block;
-	text-transform: uppercase;
-	color: #fff;
-	padding: 10px;
-	width: 100%;
-	min-height: 132px;
-	background-size: cover;
+  display: block;
+  text-transform: uppercase;
+  color: #fff;
+  padding: 10px;
+  width: 100%;
+  min-height: 132px;
+  background-size: cover;
+}
+
+.commission
+{
+  background-color: #497f9e;
+  padding: 0 0 15px 0;
+  border-top: 3px solid #F9F9F9;
+}
+
+.commission p
+{
+  color: #FFF;
+  font-size: 1.5em;
+  margin-top: 20px;
+  line-height: 1.6em;
+  text-align: center;
+}
+
+.commission .title
+{
+  font-size: 1.6em;
+  font-weight: bold;
+}
+
+.commission .participle
+{
+  font-weight: bold;
+  font-style: italic;
+}
+
+.commission .btn
+{
+  font-size: 1em;
+  margin-top: 20px;
 }
