--- a/resources/assets/less/_scriptureoftheday.less
+++ b/resources/assets/less/_scriptureoftheday.less
@@ -1,103 +1,144 @@
-.esv {
+.esv
+{
 	max-width: 600px;
 }
 
-.esv > h2:first-child {
+.esv > h2:first-child
+{
 	display: none;
 }
 
-h3 {
+h3
+{
 	text-align: left;
-	font-family: "minion-pro";
 }
 
-span.verse-num {
+span.verse-num
+{
 	font-size: 70%;
 	padding-right: .15em;
 	padding-left: .25em;
 	vertical-align: text-top;
 	color: #ccc
-	}
-span.woc { /* Words of Christ (for red-letter editions) */
+}
+
+span.woc
+{ /* Words of Christ (for red-letter editions) */
 	color: #900;
-	}
-span.chapter-num {
+}
+
+span.chapter-num
+{
 	padding-right: .5em;
 	color: #ccc;
-	}
-div.esv-text p {
+}
+
+div.esv-text p
+{
 	text-indent: 2em;
-	font-size: 1.4em;
-	line-height: 1.5789;
-	font-family: "minion-pro";
-	}
-div.esv-text p.same-paragraph {
+}
+
+div.esv-text p.same-paragraph
+{
 	text-indent: 0;
-	}
-div.block-indent p {
+}
+
+div.block-indent p
+{
 	text-indent: 0;
 	padding-left: 2.5em;
 	margin-left: 0;
-	}
-span.indent {
+}
+
+span.indent
+{
 	padding-left: 2em;
-	}
-span.indent-2, span.psalm-doxology-line {
+}
+
+span.indent-2, span.psalm-doxology-line
+{
 	padding-left: 4em;
-	}
-span.declares-line {
+}
+
+span.declares-line
+{
 	padding-left: 6em;
-	}
-span.small-caps {
+}
+
+span.small-caps
+{
 	font-variant: small-caps;
-	}
-span.selah {
+}
+
+span.selah
+{
 	font-style: italic;
 	margin-left: 1em;
-	}
-p.extra-space {
+}
+
+p.extra-space
+{
 	margin-top: 2em;
-	}
-div.block-indent span.verse-num, div.block-indent span.woc  {
+}
+
+div.block-indent span.verse-num, div.block-indent span.woc
+{
 	padding-left: 0;
-	}
-h4 {
+}
+
+h4
+{
 	font-weight: normal;
-	}
-h4.speaker {
+}
+
+h4.speaker
+{
 	padding-left: 10em;
 	font-variant: small-caps;
 	margin-bottom: -1em;
-	}
-h4.textual-note {
-	font-variant: small-caps;
-	}
-h4.psalm-acrostic-title {
-	font-variant: small-caps;
-	}
-h4.psalm-title {
+}
 
-	}
-span.footnote {
+h4.textual-note
+{
+	font-variant: small-caps;
+}
+
+h4.psalm-acrostic-title
+{
+	font-variant: small-caps;
+}
+
+span.footnote
+{
 	font-size: 80%;
 	padding-right: .5em;
 	padding-left: 0em;
 	vertical-align: text-top;
-	}
-div.footnotes h3 {
+}
+
+div.footnotes h3
+{
 	margin-top: 0;
 	margin-bottom: 0;
-	}
-div.footnotes p {
+}
+
+div.footnotes p
+{
 	text-indent: 0;
-	}
-span.footnote-ref {
+}
+
+span.footnote-ref
+{
 	font-weight: bold;
-	}
-p.copyright {
+}
+
+p.copyright
+{
 	text-indent: 0;
-	}
-object.audio {
+}
+
+object.audio
+{
 	margin: 0 0 0 10px;
 	padding: 0;
-	}
+}
