--- a/resources/assets/sass/_typography.scss
+++ b/resources/assets/sass/_typography.scss
@@ -1,5 +1,5 @@
-@font-family-base: Arial, Helvetica, sans-serif;
-@font-size-base: 12px;
+$font-family-base: Arial, Helvetica, sans-serif;
+$font-size-base: 12px;
 
 p
 {
