--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,18 +1,17 @@
 /*
  * Bootstrap CSS...
  */
-@import "node_modules/bootstrap/less/bootstrap";
+@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
 // Custom Bootstrap Variables
-@grid-float-breakpoint: 	@screen-md-min; // Point at which the navbar switches between collapsed and horizontal mode.
-                                            // Changing this from the small default to medium.
-@brand-primary:         	#497F9E;
+$grid-float-breakpoint: $screen-md-min;
+$brand-primary: #497F9E;
 
 /*
  * Medium-Editor...
  */
-@import (inline) "node_modules/medium-editor/dist/css/medium-editor.css";
-@import (inline) "node_modules/medium-editor/dist/css/themes/default.css";
+@import "node_modules/medium-editor/dist/css/medium-editor.css";
+@import "node_modules/medium-editor/dist/css/themes/default.css";
 
 // Custom styles for CompassHB.com
 @import '_navigation'; 		  // Menus
