--- a/resources/assets/sass/_base.scss
+++ b/resources/assets/sass/_base.scss
@@ -32,7 +32,7 @@ img {
   .videocontainer {
     position: relative;
     padding-bottom: 56.25%; /* proportion value to aspect ratio 16:9 (9 / 16 = 0.5625 or 56.25%) */
-    padding-top: 0px;
+    padding-top: 0;
     height: 0;
     overflow: hidden;
     margin-bottom: 20px;
