--- a/resources/assets/sass/_scriptureoftheday.scss
+++ b/resources/assets/sass/_scriptureoftheday.scss
@@ -112,7 +112,7 @@ span.footnote
 {
 	font-size: 80%;
 	padding-right: .5em;
-	padding-left: 0em;
+	padding-left: 0;
 	vertical-align: text-top;
 }
 
