--- a/resources/assets/sass/_footer.scss
+++ b/resources/assets/sass/_footer.scss
@@ -6,8 +6,7 @@ footer
 
 footer .row
 {
-  padding: 80px 40px 40px 40px;
   line-height: 2em;
-  padding-top: 40px;
+  padding: 40px;
   background-color: #FFF;
 }
