--- a/resources/assets/sass/_typography.scss
+++ b/resources/assets/sass/_typography.scss
@@ -11,7 +11,7 @@ p
 // Temporary to replace Typekit with Google Fonts
 h1.tk-seravek-web
 {
-  font-family: 'Droid Serif', Georgia, "Times New Roman", Times, serif;
+  font-family: 'Fira Sans', 'Droid Serif', Georgia, "Times New Roman", Times, serif;
   font-size: 2.4em;
   letter-spacing: -0.01em;
 }
